scripts/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loop-react-ui-${ENVIRONMENT}
  labels:
    app: loop-react-ui-${ENVIRONMENT}
    role: frontend
    service: nginx

spec:
  externalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    app: loop-react-ui-${ENVIRONMENT}
    role: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
