scripts/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loop-react-ui-${ENVIRONMENT}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - ui${INGRESS_SUFFIX}.makealoop.io
      secretName: loop-react-ui-${ENVIRONMENT}
  rules:
    - host: ui${INGRESS_SUFFIX}.makealoop.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loop-react-ui-${ENVIRONMENT}
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loop-react-ui-lpcy-${ENVIRONMENT}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - ${LPCY_PREFIX}.lpcy.uk
      secretName: loop-react-ui-lpcy-${ENVIRONMENT}
  rules:
    - host: ${LPCY_PREFIX}.lpcy.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loop-react-ui-lpcy-${ENVIRONMENT}
                port:
                  number: 80
